[project]
name = "time-series-cnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "polars>=1.22.0",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torchviz>=0.0.3",
]
