[project]
name = "time-series-cnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "polars>=1.22.0",
    "pyarrow>=19.0.1",
    "seaborn>=0.13.2",
    "ta-lib>=0.6.3",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchviz>=0.0.3",
    "tqdm>=4.67.1",
    "wrds>=3.3.0",
    "yfinance>=0.2.54",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
